--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,9 @@
   <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
       <div id="root" style="width: 100%"></div>
-      <script src="scripts/bundle.js"></script>
+      <!--<script src="scripts/bundle.js"></script>
       <script src="scripts/vendors~main.bundle.js"></script>
+      -->
       <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
